font size increase

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             </a>
         </div>
         <div class="bodyContainer">
-            <div class="name">Kapil Londhe</div>
+            <div class="name"><h1>Kapil Londhe</h1></div>
             <div class="icons">
                 <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
                     <img src="linkedin.svg"  class="linkicon" title="Linkedin profile">
