--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <title>Kapil Londhe</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="I'm a Software Engineer with 2 years of experience specializing in JavaScript and React.js. I have expertise in developing web apps and enjoy problem-solving and collaborating with others.
+        Languages: JavaScript, C++
+        Frontend: HTML, CSS, React.js, Redux
+        Backend: Node.js, Express.js
+        Database: MongoDB, MySQL
+       Technologies/ Tools: Babel, Webpack, VS code, VS Studio, Eclipse" />
     </head>
     <body>
         <div class="header">
