--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     </head>
     <body>
         <div class="header">
+            <a href="gallery.html" style="text-decoration: none; color: inherit;margin-right: 1rem;" >
+                <h3>Gallery  </h1>
+            </a>
+            <div></div>
             <a href="Kapil_Resume.pdf" style="text-decoration: none; color: inherit;" download>
                 <h3>Resume</h1>
             </a>
+
         </div>
         <div class="bodyContainer">
             <div class="name"><h1>Kapil Londhe</h1></div>
