Mobile responsive changes

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
         <div >
             <h1 style="text-align: center;">Gallery</h1>
         </div>
-        <div class="bodyContainer" style="padding-top: 26rem;">
+        <div class="galleryContainer">
             <div style="display: grid; grid-template-columns:repeat(auto-fit, minmax(350px, 1fr));gap: 10px;">
                 <img src="./Gallery/SIH1.jpeg" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
                 <img src="./Gallery/SIH2.jpeg" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
