projects and blog tabs

--- a/projects.html
+++ b/projects.html
@@ -23,24 +23,18 @@
             <a href="Blog.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
                 <h3>Blog  </h1>
             </a>
-            
+
             <a href="Kapil_Resume.pdf" style="text-decoration: none; color: inherit;" download>
                 <h3>Resume</h1>
             </a>
 
         </div>
         <div >
-            <h1 style="text-align: center;">Gallery</h1>
+            <h1 style="text-align: center;">Projects</h1>
         </div>
         <div class="galleryContainer">
-            <div style="display: grid; grid-template-columns:repeat(auto-fit, minmax(350px, 1fr));gap: 10px;">
-                <img src="./Gallery/SIH1.jpeg" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
-                <img src="./Gallery/SIH2.jpeg" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
-                <img src="./Gallery/SIH3.jpeg" class="galleryImg" title="SIH 2019 winning team presentation" alt="SIH 2019 winning team presentation">
-                <img src="./Gallery/SIH4.jpeg" class="galleryImg" title="SIH 2019 winning certificate" alt="SIH 2019 winning certificate">
-                <img src="./Gallery/SIH5.jpeg" class="galleryImg" title="SIH 2019 winning news in sakal" alt="SIH 2019 winning news in sakal">
-                <img src="./Gallery/SGGS1.jpeg" class="galleryImg" title="College project presentation to NACC commitee" alt="College project presentation to NACC commitee">
-                
+            <div style="display: flex; flex-direction: column; flex-grow: 1;">
+                Projects to be added soon...
             </div>
         </div>
     </body>
