--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
     </head>
     <body>
         <div class="header">
-            <a href="gallery.html" style="text-decoration: none; color: inherit;margin-right: 1rem;" >
+            <a href="index.html" style="text-decoration: none; color: inherit;margin-right: 2rem;">
+                <h3>Home  </h1>
+            </a>
+
+            <a href="Projects.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+                <h3>Projects  </h1>
+            </a>
+
+            <a href="gallery.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
                 <h3>Gallery  </h1>
             </a>
-            <div></div>
+
+            <a href="Blog.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+                <h3>Blog  </h1>
+            </a>
+            
             <a href="Kapil_Resume.pdf" style="text-decoration: none; color: inherit;" download>
                 <h3>Resume</h1>
             </a>
