--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h3>Home  </h1>
             </a>
 
-            <a href="Projects.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+            <a href="projects.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
                 <h3>Projects  </h1>
             </a>
 
@@ -28,7 +28,7 @@
             <a href="Blog.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
                 <h3>Blog  </h1>
             </a>
-            
+
             <a href="Kapil_Resume.pdf" style="text-decoration: none; color: inherit;" download>
                 <h3>Resume</h1>
             </a>
