--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
                 <h3>Home  </h1>
             </a>
             
-            <a href="Projects.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+            <a href="projects.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
                 <h3>Projects  </h1>
             </a>
 
