--- a/Blog.html
+++ b/Blog.html
@@ -7,24 +7,19 @@
     </head>
     <body>
         <div class="header">
-
-            <a href="index.html" style="text-decoration: none; color: inherit;margin-right: 2rem;">
+            <a href="index.html" class="headerLinks">
                 <h3>Home  </h1>
             </a>
-
-            <a href="projects.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+            <a href="projects.html" class="headerLinks" >
                 <h3>Projects  </h1>
             </a>
-
-            <a href="gallery.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+            <a href="gallery.html" class="headerLinks" >
                 <h3>Gallery  </h1>
             </a>
-
-            <a href="Blog.html" style="text-decoration: none; color: inherit;margin-right: 2rem;" >
+            <a href="Blog.html" class="headerLinkSelected" >
                 <h3>Blog  </h1>
             </a>
-            
-            <a href="Kapil_Resume.pdf" style="text-decoration: none; color: inherit;" download>
+            <a href="Kapil_Resume.pdf" class="headerLinks" download>
                 <h3>Resume</h1>
             </a>
         </div>
