--- a/Blog.html
+++ b/Blog.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="index.css">
         <title>Kapil Londhe</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="KL.PNG" type="image/x-icon">
     </head>
     <body>
         <div class="header">
