--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
         <title>Kapil Londhe</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="KL.PNG" type="image/x-icon">
     </head>
     <body>
         <div class="header">
