--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="index.css">
         <title>Kapil Londhe</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="KL.PNG" type="image/x-icon">
         <meta name="description" content="I'm a Software Engineer with 2 years of experience specializing in JavaScript and React.js. I have expertise in developing web apps and enjoy problem-solving and collaborating with others.
         Languages: JavaScript, C++
         Frontend: HTML, CSS, React.js, Redux
