--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,28 @@
         <div >
             <h1 style="text-align: center;">Projects</h1>
         </div>
-        <div class="galleryContainer">
-            <div style="display: flex; flex-direction: column; flex-grow: 1;">
-                Projects to be added soon...
+        <div class="projectContainer">
+            <div class="project">
+                <img src="./Projects/ASL.png" alt="Project 1">
+                <div class="project-description">
+                    <h2>American Sign Language recognition</h2>
+                    <p>
+                        This project introduces an innovative solution aimed at breaking down communication barriers for individuals who lack sign language proficiency or face challenges accessing sign language interpreters. By leveraging state-of-the-art technology, this project achieves a remarkable 98.23% accuracy rate in recognizing American Sign Language (ASL) alphabets.
+                    </p>
+                    <div >
+                        <a href="https://youtu.be/M8GeFaekfMY" target="_blank" style="text-decoration: none;">
+                            <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;"></img>
+                        </a>
+                        <a href="https://github.com/kapillondhe/American-sign-language-recognition" target="_blank" style="text-decoration: none;">
+                            <img src="./Logo/github.svg" style="width: 22px;padding: 5px;"></img>
+                        </a>
+                        <a href="https://www.kaggle.com/datasets/kapillondhe/american-sign-language" target="_blank" style="text-decoration: none;">
+                            <img src="./Logo/kaggle.svg" style="width: 22px;padding: 5px;"></img>
+                        </a>
+                    </div>
+                </div>
             </div>
+            
         </div>
     </body>
 </html>
