--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="name"><h1>Kapil Londhe</h1></div>
             <div class="icons">
                 <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
-                    <img src="linkedin.svg" alt="Linkedin icon" class="linkicon" title="Linkedin profile">
+                    <img src="./Logo/linkedin.svg" alt="Linkedin icon" class="linkicon" title="Linkedin profile">
                 </a>
                 <a href="https://github.com/kapillondhe" target="_blank" class="iconLink">
-                    <img src="github.svg"  alt="Github icon" class="linkicon" title="Github profile">
+                    <img src="./Logo/github.svg"  alt="Github icon" class="linkicon" title="Github profile">
                 </a>
                 <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
-                    <img src="mail.svg" alt="Email icon" class="linkicon"  title="Email to kapillondhe25@gmail.com">
+                    <img src="./Logo/mail.svg" alt="Email icon" class="linkicon"  title="Email to kapillondhe25@gmail.com">
                 </a>
             </div>
         </div>
