--- a/Blog.html
+++ b/Blog.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <title>Kapil Londhe</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="KL.PNG" type="image/x-icon">
     </head>
     <body>
@@ -25,11 +26,23 @@
             </a>
         </div>
         <div >
-            <h1 style="text-align: center;">Blog</h1>
+            <h1 style="text-align: center;">Blogs</h1>
         </div>
+        <div class="blogContainer">
+            <a href="https://stirring-turner-9d1.notion.site/Blog-1-a9f07ad47567444f8be1856afc589088?pvs=4" target="_blank" style="text-decoration: none;">
+                <div class="blog">
+                    <img src="./Projects/ASL.png" alt="Project 1">
+                    <div class="project-description">
+                        <h2>American Sign Language recognition</h2>
+                        <p>
+                            Date : 25/02/2024
+                        </p>
+                        
+                    </div>
+                </div>
+            </a>
 
-        <div class="bodyContainer">
-           Blogs to be added soon... 
+            
         </div>
     </body>
 </html>
