--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
         <title>Kapil Londhe</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="KL.PNG" type="image/x-icon">
-        <meta name="description" content="I'm a Software Engineer with 2 years of experience specializing in JavaScript and React.js. I have expertise in developing web apps and enjoy problem-solving and collaborating with others.
-        Languages: JavaScript, C++
-        Frontend: HTML, CSS, React.js, Redux
-        Backend: Node.js, Express.js
-        Database: MongoDB, MySQL
-       Technologies/ Tools: Babel, Webpack, VS code, VS Studio, Eclipse" />
+        <meta name="description" content="I'm a Software Engineer with 2 years of experience specializing in JavaScript and React.js. I have expertise in developing web apps and enjoy problem-solving and collaborating with others. Languages: JavaScript, C++. Frontend: HTML, CSS, React.js, Redux. Backend: Node.js, Express.js. Database: MongoDB, MySQL. Technologies/Tools: Babel, Webpack, VS code, VS Studio, Eclipse">
+        <meta name="keywords" content="Software Engineer, JavaScript, React.js, web apps, problem-solving, collaboration, HTML, CSS, Redux, Node.js, Express.js, MongoDB, MySQL, Babel, Webpack, VS code, VS Studio, Eclipse">
+        <meta name="author" content="Kapil Londhe">
     </head>
     <body>
         <div class="header">
