--- a/projects.html
+++ b/projects.html
@@ -39,13 +39,13 @@
                     </p>
                     <div >
                         <a href="https://youtu.be/M8GeFaekfMY" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;"></img>
+                            <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;" alt="Youtube icon"></img>
                         </a>
                         <a href="https://github.com/kapillondhe/American-sign-language-recognition" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/github.svg" style="width: 22px;padding: 5px;"></img>
+                            <img src="./Logo/github.svg" style="width: 22px;padding: 5px;" alt="Github icon"></img>
                         </a>
                         <a href="https://www.kaggle.com/datasets/kapillondhe/american-sign-language" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/kaggle.svg" style="width: 22px;padding: 5px;"></img>
+                            <img src="./Logo/kaggle.svg" style="width: 22px;padding: 5px;" alt="Kaggle icon"></img>
                         </a>
                     </div>
                 </div>
