--- a/Blog.html
+++ b/Blog.html
@@ -30,7 +30,7 @@
             <h1 style="text-align: center;">Blogs</h1>
         </div>
         <div class="blogContainer">
-            <a href="https://stirring-turner-9d1.notion.site/Blog-1-a9f07ad47567444f8be1856afc589088?pvs=4" target="_blank" style="text-decoration: none;">
+            <a href="https://kapillondhe.notion.site/ASL-a9f07ad47567444f8be1856afc589088?pvs=4" target="_blank" style="text-decoration: none;">
                 <div class="blog">
                     <div class="project-description">
                         <h2>American Sign Language recognition</h2>
