--- a/resume.html
+++ b/resume.html
@@ -31,23 +31,12 @@
             <a href="Blog.html" class="headerLinks" >
                 <h3>Blog  </h1>
             </a>
-            <a href="resume.html" class="headerLinks">
+            <a href="Kapil_Resume.pdf" class="headerLinks" download>
                 <h3>Resume</h1>
             </a>
         </div>
-        <div class="bodyContainer">
-            <div class="name"><h1>Kapil Londhe</h1></div>
-            <div class="icons">
-                <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
-                    <img src="./Logo/linkedin.svg" alt="Linkedin icon" class="linkicon" title="Linkedin profile">
-                </a>
-                <a href="https://github.com/kapillondhe" target="_blank" class="iconLink">
-                    <img src="./Logo/github.svg"  alt="Github icon" class="linkicon" title="Github profile">
-                </a>
-                <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
-                    <img src="./Logo/mail.svg" alt="Email icon" class="linkicon"  title="Email to kapillondhe25@gmail.com">
-                </a>
-            </div>
+        <div >
+            <iframe src="Kapil_Resume.pdf" width="100%" height="620px"></iframe>
         </div>
     </body>
 </html>
