--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="index.html" class="headerLinkSelected">
+            <a href="index.html" class="headerLinks">
                 <h3>Home  </h1>
             </a>
             <a href="projects.html" class="headerLinks" >
@@ -31,7 +31,7 @@
             <a href="Blog.html" class="headerLinks" >
                 <h3>Blog  </h1>
             </a>
-            <a href="Kapil_Resume.pdf" class="headerLinks" download>
+            <a href="resume.html" class="headerLinkSelected">
                 <h3>Resume</h1>
             </a>
         </div>
