--- a/Blog.html
+++ b/Blog.html
@@ -22,7 +22,7 @@
             <a href="Blog.html" class="headerLinkSelected" >
                 <h3>Blog  </h1>
             </a>
-            <a href="Kapil_Resume.pdf" class="headerLinks" download>
+            <a href="resume.html" class="headerLinks" download>
                 <h3>Resume</h1>
             </a>
         </div>
