added projects, and added square images in gallery

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,36 @@
         </div>
         <div class="projectContainer">
             <div class="project">
-                <img src="./Projects/ASL.png" alt="Project 1">
+                <img src="./Projects/Siemens logo.webp" alt="MBSE Parameters Management">
+                <div class="project-description">
+                    <h2>MBSE Parameters Management </h2>
+                    <p>
+                        Teamcenter MBSE Parameter Management helps manage industrial parameters in the MBSE workflow.<br>Designed a user interface to display industrial parameters.
+                    </p>
+                    <div >
+                        <a href="https://youtu.be/xwXw7BAZt3Q?si=xhpuCeXNwV_8A5FN" target="_blank" style="text-decoration: none;">
+                            <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;" alt="Youtube icon"></img>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project">
+                <img src="./Projects/Siemens logo.webp" alt="MBSE Integrations">
+                <div class="project-description">
+                    <h2>MBSE Integrations </h2>
+                    <p>
+                        Engineered a diagnostic tool utilized by diverse simulation platforms (e.g., Matlab) to interface with Teamcenter,ensuring robust connectivity and data integrity.
+                    </p>
+                    <div >
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="project">
+                <img src="./Projects/ASL.png" alt="American Sign Language recognition">
                 <div class="project-description">
                     <h2>American Sign Language recognition</h2>
                     <p>
@@ -50,6 +79,7 @@
                     </div>
                 </div>
             </div>
+            
             
         </div>
     </body>
