--- a/gallery.html
+++ b/gallery.html
@@ -34,17 +34,19 @@
 
                 <img src="./Gallery/Bhairavgad.jpeg" class="galleryImg" title="Bhairavgad" alt="Bhairavgad">
                 <img src="./Gallery/RihedamCycle.jpeg" class="galleryImg" title="RihedamCycle" alt="RihedamCycle">
+                <!--
                 <img src="./Gallery/VisapurWaterfall.jpeg" class="galleryImg" title="VisapurWaterfall" alt="VisapurWaterfall">
                 <img src="./Gallery/Irshalgad.jpeg" class="galleryImg" title="Irshalgad" alt="Irshalgad">
+                -->
                 <img src="./Gallery/ApacheDiveagar.jpeg" class="galleryImg" title="ApacheDiveagar" alt="ApacheDiveagar">
-                <img src="./Gallery/MulshiLake.jpeg" class="galleryImg" title="MulshiLake" alt="MulshiLake">
+                <img src="./Gallery/MulshiLake.png" class="galleryImg" title="MulshiLake" alt="MulshiLake">
                 
-                <img src="./Gallery/SIH1.jpeg" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
-                <img src="./Gallery/SIH2.jpeg" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
-                <img src="./Gallery/SIH3.jpeg" class="galleryImg" title="SIH 2019 winning team presentation" alt="SIH 2019 winning team presentation">
-                <img src="./Gallery/SIH4.jpeg" class="galleryImg" title="SIH 2019 winning certificate" alt="SIH 2019 winning certificate">
-                <img src="./Gallery/SIH5.jpeg" class="galleryImg" title="SIH 2019 winning news in sakal" alt="SIH 2019 winning news in sakal">
-                <img src="./Gallery/SGGS1.jpeg" class="galleryImg" title="College project presentation to NACC commitee" alt="College project presentation to NACC commitee">
+                <img src="./Gallery/SIH1.png" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
+                <img src="./Gallery/SIH2.png" class="galleryImg" title="SIH 2019 winning team" alt="SIH 2019 winning team">
+                <img src="./Gallery/SIH3.png" class="galleryImg" title="SIH 2019 winning team presentation" alt="SIH 2019 winning team presentation">
+                <img src="./Gallery/SIH4.png" class="galleryImg" title="SIH 2019 winning certificate" alt="SIH 2019 winning certificate">
+                <img src="./Gallery/SIH5.png" class="galleryImg" title="SIH 2019 winning news in sakal" alt="SIH 2019 winning news in sakal">
+                <img src="./Gallery/SGGS1.png" class="galleryImg" title="College project presentation to NACC commitee" alt="College project presentation to NACC commitee">
 
             </div>
         </div>
