--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
             </a>
         </div>
         <div >
-            <iframe src="Kapil_Resume.pdf" width="100%" height="650px"></iframe>
+            <iframe src="Kapil_Resume.pdf" width="100%" height="650px" title="Resume of Kapil"></iframe>
         </div>
     </body>
 </html>
