Made favicon 16*16 and added shortcut icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Kapil Londhe</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="KL.PNG" type="image/x-icon">
+        <link rel="shortcut icon" href="KL.PNG" type="image/x-icon">
         <meta name="description" content="
         Kapil Londhe is a contract employee at Siemens Digital Industries Software, Pune, actively contributing to the development of Teamcenter Active Workspace as a member of the Parameters Management team within Teamcenter Model Based System Engineering (MBSE). Proficient in frontend development, Kapil specializes in creating responsive and user-friendly interfaces using HTML, CSS, JavaScript, and React. With extensive experience in the software development lifecycle, Kapil engages in gathering requirements, designing, testing, deploying, and maintaining applications.
 
