SEO and Resume iframe resize

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,9 @@
         <title>Kapil Londhe</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Image gallery of Kapil Londhe">
+        <meta name="description" content="Image gallery of Kapil Londhe
+            Kapil Londhe is a skilled full-stack developer, passionate about technology. Outside of work, he enjoy pursuing interests in psychology, cycling, and swimming.
+        ">
         <link rel="icon" href="KL.PNG" type="image/x-icon">
     </head>
     <body>
