--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="KL.PNG" type="image/x-icon">
         <meta name="description" content="
-        
-Kapil Londhe is a skilled full-stack developer, passionate about technology. Outside of work, he enjoy pursuing interests in psychology, cycling, and swimming.
+        Kapil Londhe is a skilled full-stack developer, passionate about technology. Outside of work, he enjoy pursuing interests in psychology, cycling, and swimming.
         Kapil Londhe is a contract employee at Siemens Digital Industries Software, Pune, actively contributing to the development of Teamcenter Active Workspace as a member of the Parameters Management team within Teamcenter Model Based System Engineering (MBSE). Proficient in frontend development, Kapil specializes in creating responsive and user-friendly interfaces using HTML, CSS, JavaScript, and React. With extensive experience in the software development lifecycle, Kapil engages in gathering requirements, designing, testing, deploying, and maintaining applications.
 
         Having implemented effective strategies, Kapil significantly reduced syslog errors in the backend, leading to a remarkable decrease in error count. Additionally, Kapil resolved Coverity issues in both frontend and backend code, thereby enhancing code quality and security. Adopting test-driven development methodologies using Jest for frontend and GTest for backend code, Kapil ensures the robustness and reliability of software products.
@@ -21,7 +20,7 @@ Kapil Londhe is a skilled full-stack developer, passionate about technology. Out
     </head>
     <body>
         <div class="header">
-            <a href="index.html" class="headerLinks">
+            <a href="/" class="headerLinks">
                 <h3>Home  </h1>
             </a>
             <a href="projects.html" class="headerLinks" >
