--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="index.html" class="headerLinks">
+            <a href="/" class="headerLinks">
                 <h3>Home  </h1>
             </a>
             <a href="projects.html" class="headerLinks" >
