Added Strava link.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
                     <img src="./Logo/mail.svg" alt="Email icon" class="linkicon"  title="Email to kapillondhe25@gmail.com">
                 </a>
+                <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
+                    <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon"  title="Strava Profile">
+                </a>
             </div>
         </div>
     </body>
