--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
                     <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon"  title="Strava Profile">
                 </a>
+                <a href="https://www.instagram.com/kapil_londhe_/" class="iconLink">
+                    <img src="./Logo/instagram.svg" alt="Instagram icon" class="linkicon"  title="Instagram Profile">
+                </a>
             </div>
         </div>
     </body>
