icon hover effect

--- a/index.html
+++ b/index.html
@@ -40,19 +40,16 @@
             <div class="name"><h1>Kapil Londhe</h1></div>
             <div class="icons">
                 <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
-                    <img src="./Logo/linkedin.svg" alt="Linkedin icon" class="linkicon" title="Linkedin profile">
+                    <img src="./Logo/linkedin.svg" alt="Linkedin icon" class="linkicon" title="Linkedin">
                 </a>
                 <a href="https://github.com/kapillondhe" target="_blank" class="iconLink">
-                    <img src="./Logo/github.svg"  alt="Github icon" class="linkicon" title="Github profile">
+                    <img src="./Logo/github.svg"  alt="Github icon" class="linkicon" title="Github">
                 </a>
                 <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
                     <img src="./Logo/mail.svg" alt="Email icon" class="linkicon"  title="Email to kapillondhe25@gmail.com">
                 </a>
                 <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
-                    <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon"  title="Strava Profile">
-                </a>
-                <a href="https://www.instagram.com/kapil_londhe_/" class="iconLink">
-                    <img src="./Logo/instagram.svg" alt="Instagram icon" class="linkicon"  title="Instagram Profile">
+                    <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon"  title="Strava">
                 </a>
             </div>
         </div>
