web performance blog

--- a/Blog.html
+++ b/Blog.html
@@ -32,10 +32,10 @@
             <h1 style="text-align: center;">Blogs</h1>
         </div>
         <div class="blogContainer">
-            <a href="https://kapillondhe.notion.site/ASL-a9f07ad47567444f8be1856afc589088?pvs=4" target="_blank" style="text-decoration: none;">
+            <a href="https://kapillondhe.notion.site/Web-Performance-00d842b810c649b6ad27c1b235e5ea44?pvs=4" target="_blank" style="text-decoration: none;">
                 <div class="blog">
                     <div class="project-description">
-                        <h2>American Sign Language recognition</h2>
+                        <h2>Web Performance</h2>
                         <p>
                             Date : 25/02/2024
                         </p>
