improved performance of project page

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
         </div>
         <div class="projectContainer">
             <div class="project">
-                <img src="./Projects/Siemens logo.webp" alt="MBSE Parameters Management">
+                <img class="projectLogo" src="./Projects/Siemens logo.webp" alt="MBSE Parameters Management">
                 <div class="project-description">
                     <h2>MBSE Parameters Management </h2>
                     <p>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="project">
-                <img src="./Projects/Siemens logo.webp" alt="MBSE Integrations">
+                <img class="projectLogo" src="./Projects/Siemens logo.webp" alt="MBSE Integrations">
                 <div class="project-description">
                     <h2>MBSE Integrations </h2>
                     <p>
@@ -60,7 +60,7 @@
 
 
             <div class="project">
-                <img src="./Projects/ASL.png" alt="American Sign Language recognition">
+                <img class="projectLogo" src="./Projects/ASL.png" alt="American Sign Language recognition">
                 <div class="project-description">
                     <h2>American Sign Language recognition</h2>
                     <p>
