--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
             <h1 style="text-align: center;">Gallery</h1>
         </div>
         <div class="galleryContainer">
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 15px;">
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 15px; padding: 0 10px">
                 <img src="./Gallery/Bhairavgad.jpeg" class="galleryImg" title="Bhairavgad" alt="Bhairavgad">
                 <img src="./Gallery/RihedamCycle.jpeg" class="galleryImg" title="RihedamCycle" alt="RihedamCycle">
                 <!--
